--- a/_config.yml
+++ b/_config.yml
@@ -23,13 +23,10 @@ resume_contact_address:         "Seoul"
 resume_header_contact_info:     "Seoul • seungbin.baik@gmail.com"
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>안녕하세요!
-세상과 사람에 대한 호기심으로 influence factor를 발굴해 새로운 기회를 발굴하는 것을 즐기는 백승빈입니다. 급변하는 상황과 위기에 대응하는 Game Changer가 되기 위해 보다 나은 팀의 Facilitator가 되기 위해 노력하고 있습니다. 저는 목표의 달성과 높은 성과를 위해서는 Teamwork이 중요하다 생각합니다. 그리고 Team-driven을 위해서는 개인의 전문성이 융합될 수 있는 높은 수준의 빠른 소통과 의사결정이 중요하다 믿고 있습니다.
-
-그리고 이를 총괄하는 팀의 리더는 오케스트라의 지휘자라고 생각합니다. 자신만의 특별하고 독보적인 Skill을 갈고 닦음과 동시에 조직에 부족한 것을 채우고 조화를 이룰 수 있게 돕는 촉진제 역할에 더 집중하고 조직의 나침반 역할을 해줄 수 있어야 하기 때문입니다. 이때 좋은 지휘자는 필연적으로 동료로부터 높은 신뢰감을 형성하는 것이 중요하다 생각합니다. 이를 위해 저는 전체의 프로세스를 동료들이 납득할 만한 수준으로 세분화하고 발전시키는 것에 집중하는 편이며 건설적이고 효율적인 회의를 위해 그들의 깊이 있는 작업을 이해하는 것에 힘쓰고 있습니다.
-
-저의 지금이 제가 이상적으로 생각하는 팀의 리더는 아니라고 생각합니다. 하지만 저는 전략적인 생각을 기반으로 세상과 비즈니스와 제품을 연결하는 일에 계속 도전하고 있으며 서비스에 대한 경험을 쌓고 있습니다. 특히 좋은 제품을 위해 팀 빌딩부터 제품 개발까지의 A to Z, 제품과 비즈니스의 end-to-end를 수행하며 쌓인 경험들은 제가 지향하는 리더가 되기 위한 좋은 경험이 되고 있다고 믿고 있습니다.
-
+resume_header_intro: "<p>안녕하세요!<br><br>
+세상과 사람에 대한 호기심으로 influence factor를 발굴해 새로운 기회를 발굴하는 것을 즐기는 백승빈입니다. 급변하는 상황과 위기에 대응하는 Game Changer가 되기 위해 보다 나은 팀의 Facilitator가 되기 위해 노력하고 있습니다. 저는 목표의 달성과 높은 성과를 위해서는 Teamwork이 중요하다 생각합니다. 그리고 Team-driven을 위해서는 개인의 전문성이 융합될 수 있는 높은 수준의 빠른 소통과 의사결정이 중요하다 믿고 있습니다.<br><br>
+그리고 이를 총괄하는 팀의 리더는 오케스트라의 지휘자라고 생각합니다. 자신만의 특별하고 독보적인 Skill을 갈고 닦음과 동시에 조직에 부족한 것을 채우고 조화를 이룰 수 있게 돕는 촉진제 역할에 더 집중하고 조직의 나침반 역할을 해줄 수 있어야 하기 때문입니다. 이때 좋은 지휘자는 필연적으로 동료로부터 높은 신뢰감을 형성하는 것이 중요하다 생각합니다. 이를 위해 저는 전체의 프로세스를 동료들이 납득할 만한 수준으로 세분화하고 발전시키는 것에 집중하는 편이며 건설적이고 효율적인 회의를 위해 그들의 깊이 있는 작업을 이해하는 것에 힘쓰고 있습니다.<br><br>
+저의 지금이 제가 이상적으로 생각하는 팀의 리더는 아니라고 생각합니다. 하지만 저는 전략적인 생각을 기반으로 세상과 비즈니스와 제품을 연결하는 일에 계속 도전하고 있으며 서비스에 대한 경험을 쌓고 있습니다. 특히 좋은 제품을 위해 팀 빌딩부터 제품 개발까지의 A to Z, 제품과 비즈니스의 end-to-end를 수행하며 쌓인 경험들은 제가 지향하는 리더가 되기 위한 좋은 경험이 되고 있다고 믿고 있습니다.<br><br>
 소중한 인연을 기대합니다!</p>"
 
 # use "yes" to display the email contact button,
@@ -52,15 +49,15 @@ resume_section_associations:    true
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
 resume_social_links:
-  resume_github_url:            "https://github.com/jglovier/resume-template"
-  resume_twitter_url:           "http://twitter.com/jglovier"
-  resume_dribbble_url:          "https://dribbble.com/jag"
+  # resume_github_url:            "https://github.com/jglovier/resume-template"
+  # resume_twitter_url:           "http://twitter.com/jglovier"
+  # resume_dribbble_url:          "https://dribbble.com/jag"
   # resume_facebook_url:          "insert Facebook URL here"
-  resume_linkedin_url:          "https://www.linkedin.com/in/joelglovier"
+  # resume_linkedin_url:          "https://www.linkedin.com/in/joelglovier"
   # resume_instagram_url:         "insert your Instagram URL here"
-  resume_website_url:           "http://joelglovier.com"
-  resume_medium_url:            "https://medium.com/@jglovier"
-resume_print_social_links:      true
+  # resume_website_url:           "http://joelglovier.com"
+  # resume_medium_url:            "https://medium.com/@jglovier"
+resume_print_social_links:      False
 
 # Design settings
 resume_theme:                   default
