--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,19 +1,18 @@
 # Jobs
 # VP of Global Communications
-- company: Springfield International Human Rights Outreach
-  position: VP of Global Communications
-  duration: Oct, 2013 &mdash; Present
-  summary: Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>A project you are proud of</li><li>Another awesome project</li><li>or a team or department you worked with</li></ul>
+- company: Labelr(DeepNatural Inc.)
+  position: Product Owner
+  duration: Jun, 2020 &mdash; Present
+  summary: <ul class="resume-item-list"><li>Director</li><li>Product Owner</li><li>Lead of Product Owner</li></ul>
 
 # Director of Digital Stratgy
-- company: United Nations Human Rights Council
-  position: Director of Digital Strategy
-  duration:  Jun, 2010 &mdash; Sept, 2013
-  summary: If your stint was shorter, feel free to be brief and just call out the most meaningful points of your role. Be concise, and be meaninful. The person reading just needs enough to want to talk to you more about your experience.
-
+- company: NerdFactory(Plani Inc.)
+  position: Product Owner
+  duration:  Aug, 2014 &mdash; Mar, 2020
+  summary: <ul class="resume-item-list"><li>Director of Research Institute</li><li>Led of Product Owner</li><li>iOS Developer</li><li>Product Designer</li></ul>
 
 # Communications Coordinator
-- company: Springfield Women & Children's Center
-  position: Communications Coordinator
-  duration:   Jun, 2008  &mdash; May, 2010
-  summary: Led communication efforts across digital and traditional media channels for marketing and public relations, internal communication strategies, and coordinated support programs for the recipients of the center's services.
+- company: EiffelCom Inc.
+  position: Marketing Manager
+  duration:   Oct, 2011  &mdash; Jul, 2014
+  summary: <ul class="resume-item-list"><li>Marketing Manager</li>
