--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,18 +1,18 @@
 # Jobs
 # VP of Global Communications
-- company: Labelr(DeepNatural Inc.)
-  position: Product Owner
+- company: Labelr
+  position: DeepNatural Inc.
   duration: Jun, 2020 &mdash; Present
   summary: <ul class="resume-item-list"><li>Director</li><li>Product Owner</li><li>Lead of Product Owner</li></ul>
 
 # Director of Digital Stratgy
-- company: NerdFactory(Plani Inc.)
-  position: Product Owner
+- company: NerdFactory
+  position: Plani Inc.
   duration:  Aug, 2014 &mdash; Mar, 2020
   summary: <ul class="resume-item-list"><li>Director of Research Institute</li><li>Led of Product Owner</li><li>iOS Developer</li><li>Product Designer</li></ul>
 
 # Communications Coordinator
-- company: EiffelCom Inc.
-  position: Marketing Manager
+- company: 
+  position: EiffelCom Inc.
   duration:   Oct, 2011  &mdash; Jul, 2014
   summary: <ul class="resume-item-list"><li>Marketing Manager</li>
