--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,18 +1,18 @@
 # Jobs
 # VP of Global Communications
-- company: Labelr
-  position: DeepNatural Inc.
+- company: 딥네츄럴
+  position: 레이블러(Labelr)
   duration: Jun, 2020 &mdash; Present
   summary: <ul class="resume-item-list"><li>Director</li><li>Product Owner</li><li>Lead of Product Owner</li></ul>
 
 # Director of Digital Stratgy
-- company: NerdFactory
-  position: Plani Inc.
+- company: 플랜아이
+  position: 너드팩토리(NerdFactory)
   duration:  Aug, 2014 &mdash; Mar, 2020
   summary: <ul class="resume-item-list"><li>Director of Research Institute</li><li>Led of Product Owner</li><li>iOS Developer</li><li>Product Designer</li></ul>
 
 # Communications Coordinator
-- company: 
-  position: EiffelCom Inc.
+- company: 에펠정보통신
+  position: 
   duration:   Oct, 2011  &mdash; Jul, 2014
   summary: <ul class="resume-item-list"><li>Marketing Manager</li>
