--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,18 +1,23 @@
 # Jobs
 # VP of Global Communications
-- company: 딥네츄럴
-  position: 레이블러(Labelr)
+- company: DeepNatural Inc.
+  position: Labelr
   duration: Jun, 2020 &mdash; Present
   summary: <ul class="resume-item-list"><li>Director</li><li>Product Owner</li><li>Lead of Product Owner</li></ul>
 
+- company: Mfort Inc.
+  position: Mom-Sitter
+  duration: Apr, 2020 &mdash; May, 2020
+  summary: <ul class="resume-item-list"><li>Product Owner</li></ul>
+
 # Director of Digital Stratgy
-- company: 플랜아이
-  position: 너드팩토리(NerdFactory)
+- company: Plani Inc.
+  position: NerdFactory
   duration:  Aug, 2014 &mdash; Mar, 2020
   summary: <ul class="resume-item-list"><li>Director of Research Institute</li><li>Led of Product Owner</li><li>iOS Developer</li><li>Product Designer</li></ul>
 
 # Communications Coordinator
-- company: 에펠정보통신
-  position: 
+- company: EiffelCom Inc.
+  position:
   duration:   Oct, 2011  &mdash; Jul, 2014
   summary: <ul class="resume-item-list"><li>Marketing Manager</li>
