--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,13 +1,19 @@
 # Degree
-- degree: Bachelor of Arts, Human Rights
-  uni: Yale University
-  year: 2004 &mdash; 2008
+- degree: MS(공학석사)
+  uni: KAIST
+  year: 2016 &mdash; 2018
   awards:
-    - award: Summa Cumme Laude graduate
-  summary: If you had any meaningful roles at college, feel free to write about them here
+    - award: 온라인 빅데이터를 이용한 미래 예측에 관한 연구: 감성 분석과 전이 엔트로피를 기반으로
+  summary:
 
-- degree: High School Diploma
-  uni: Springfield High School
-  year: 2004
-  award: Most likely to succeed
-  summary: You can choose to have either a single or multiple awards
+- degree: MBA(경영학석사)
+  uni: 충남대학교
+  year: 2013 &mdash; 2015
+  award:
+  summary:
+
+- degree: BA(법학사)
+  uni: China University of Political Science & Law
+  year: 2005 &mdash; 2009
+  award: Comparison of Korean and Chinese Economic Laws
+  summary: 
