--- a/_config.yml
+++ b/_config.yml
@@ -1,67 +1,138 @@
-# Site settings
-title: "Seungbin Baik"
-description: ""
+# Site
+repository: Git repository where your resume will be hosted, only required if you are hosting on GitHub (eg. sproogen/modern-resume-theme)
+# favicon: Directory of your favicon (eg. images/favicon.ico)(optional)
+
+# Content configuration version
+version: 2
+
+# Personal info
+name: Your Name
+title: Your job title
+email: Your email (optional)
+# email_title: Email (Email title override)
+phone: Your phone number (optional)
+# phone_title: Phone (Phone title override)
+website: Your website (eg. https://google.com)(optional)
+# website_title: Web (Website title override)
+
+# Dark Mode (true/false/never)
+darkmode: false
+
+# Social links
+twitter_username: jekyllrb
+github_username:  jekyll
+stackoverflow_username: "00000001"
+dribbble_username: jekyll
+facebook_username: jekyll
+flickr_username: jekyll
+instagram_username: jekyll
+linkedin_username: jekyll
+xing_username: jekyll
+pinterest_username: jekyll
+youtube_username: jekyll
+googleplus_username: +jekyll
+orcid_username: 0000-0000-0000-0000
+
+# Additional icon links
+additional_links:
+- title: Link name
+  icon: Font Awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
+  url: Link url (eg. https://google.com)
+# - title: another link
+#   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
+#   url: Link url (eg. https://google.com)
+
+# Google Analytics and Tag Manager
+# Using more than one of these may cause issues with reporting
+# gtm: "GTM-0000000"
+# gtag: "UA-00000000-0"
+# google_analytics: "UA-00000000-0"
+
+# About Section
+# about_title: About Me (Use this to override about section title)
+about_profile_image: Directory of profile image (eg. images/profile.jpg)
+about_content: | # this will include new lines to allow paragraphs
+  Write an awesome description about yourself here, this supports markdown, so you can add [links](http://foobar.com) and highlight things <mark>like this</mark>.
+
+  You can even add paragraphs by using empty lines like this and add anything else [markdown](https://www.markdownguide.org/getting-started#what-is-markdown) supports such as
+    - Lists
+    - Tables
+    - <a href="google.com">Links</a>
+    - Images ![alt text](/images/landscape-trees.jpg "Trees")
+
+content:
+  - title: Projects # Title for the section
+    layout: list # Type of content section (list/text)
+    content:
+      - layout: left
+        title: Project name
+        link: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
+        link_text: Link Text
+        additional_links:
+          - title:  Github page for project (eg. sproogen/modern-resume-theme)
+            icon: fab fa-github
+            url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
+          - title:  Github page for project (eg. sproogen/modern-resume-theme)
+            icon: fab fa-github
+            url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
+        quote: >
+          Short overview of the project (optional)
+        description: | # this will include new lines to allow paragraphs
+          Description about the work on/with the project
+  - title: Experience
+    layout: list
+    content:
+      - layout: right
+        title: Company name
+        sub_title: Job title
+        caption: Date Range (eg. November 2016 - present)
+        link: Link to company (optional)
+        quote: >
+          Short description of the company (optional)
+        description: | # this will include new lines to allow paragraphs
+          Description of role
+  - title: Education
+    layout: list
+    content:
+      - layout: top-right
+        title: Institution name
+        sub_title: Qualifications (eg. BA Performing Arts)
+        caption: Date Range (eg. 2016 - 2019)
+        quote: >
+          Short institution or course description (optional)
+        description: | # this will include new lines to allow paragraphs
+          Description of qualification
+  - title: A Little More About Me
+    layout: text
+    content: | # this will include new lines to allow paragraphs
+      This is where you can write a little more about yourself. You could title this section **Interests** and include some of your other interests.
+
+      Or you could title it **Skills** and write a bit more about things that make you more desirable, like *leadership* or *teamwork*
+
+# Footer
+footer_show_references: true
+# references_title: References on request (Override references text)
 
 # Build settings
-markdown: kramdown
+# theme: modern-resume-theme (Use this is you are hosting your resume yourself)
+# remote_theme: sproogen/modern-resume-theme (Use this if you are hosting your resume on GitHub)
+
 sass:
   sass_dir: _sass
   style: compressed
 
-# Resume settings
-resume_avatar:                  "true"
-resume_name:                    "Seungbin Baik"
-resume_title:                   "Product Owner"
+plugins:
+ - jekyll-seo-tag
 
-# used for the contact button in _layouts/resume.html
-resume_contact_email:           "seungbin.baik@gmail.com"
-
-# the next two items are used for schema itemprops in _layouts/resume.html
-resume_contact_telephone:       ""
-resume_contact_address:         "Seoul"
-
-resume_header_contact_info:     "Seoul • seungbin.baik@gmail.com"
-display_header_contact_info:    "false"
-
-resume_header_intro: "<p>안녕하세요!<br><br>
-세상과 사람에 대한 호기심으로 influence factor를 발굴해 새로운 기회를 발굴하는 것을 즐기는 백승빈입니다. 급변하는 상황과 위기에 대응하는 Game Changer가 되기 위해 보다 나은 팀의 Facilitator가 되기 위해 노력하고 있습니다. 저는 목표의 달성과 높은 성과를 위해서는 Teamwork이 중요하다 생각합니다. 그리고 Team-driven을 위해서는 개인의 전문성이 융합될 수 있는 높은 수준의 빠른 소통과 의사결정이 중요하다 믿고 있습니다.<br><br>
-그리고 이를 총괄하는 팀의 리더는 오케스트라의 지휘자라고 생각합니다. 자신만의 특별하고 독보적인 Skill을 갈고 닦음과 동시에 조직에 부족한 것을 채우고 조화를 이룰 수 있게 돕는 촉진제 역할에 더 집중하고 조직의 나침반 역할을 해줄 수 있어야 하기 때문입니다. 이때 좋은 지휘자는 필연적으로 동료로부터 높은 신뢰감을 형성하는 것이 중요하다 생각합니다. 이를 위해 저는 전체의 프로세스를 동료들이 납득할 만한 수준으로 세분화하고 발전시키는 것에 집중하는 편이며 건설적이고 효율적인 회의를 위해 그들의 깊이 있는 작업을 이해하는 것에 힘쓰고 있습니다.<br><br>
-저의 지금이 제가 이상적으로 생각하는 팀의 리더는 아니라고 생각합니다. 하지만 저는 전략적인 생각을 기반으로 세상과 비즈니스와 제품을 연결하는 일에 계속 도전하고 있으며 서비스에 대한 경험을 쌓고 있습니다. 특히 좋은 제품을 위해 팀 빌딩부터 제품 개발까지의 A to Z, 제품과 비즈니스의 end-to-end를 수행하며 쌓인 경험들은 제가 지향하는 리더가 되기 위한 좋은 경험이 되고 있다고 믿고 있습니다.<br><br>
-소중한 인연을 기대합니다!</p>"
-
-# use "yes" to display the email contact button,
-# "no" to display an "I'm not looking for work" message,
-# or remove the resume_looking_for_work option entirely
-# to leave blank
-resume_looking_for_work:        "yes"
-
-# Decide which sections to use
-# comment out to hide
-resume_section_experience:      true
-resume_section_education:       true
-resume_section_projects:        true
-resume_section_skills:          true
-resume_section_recognition:     false
-resume_section_links:           true
-resume_section_associations:    false
-# resume_section_interests:       true
-
-# Resume social links
-# uncomment the options you wish to display, and add your own URL
-resume_social_links:
-  # resume_github_url:            "https://github.com/jglovier/resume-template"
-  # resume_twitter_url:           "http://twitter.com/jglovier"
-  # resume_dribbble_url:          "https://dribbble.com/jag"
-  # resume_facebook_url:          "insert Facebook URL here"
-  # resume_linkedin_url:          "https://www.linkedin.com/in/joelglovier"
-  # resume_instagram_url:         "insert your Instagram URL here"
-  # resume_website_url:           "http://joelglovier.com"
-  # resume_medium_url:            "https://medium.com/@jglovier"
-resume_print_social_links:      False
-
-# Design settings
-resume_theme:                   default
-
-# Note: when editing locally, remember to restart
-# your Jekyll server when you edit this file. Changes
-# to _config.yml are only recognized when the server starts
+exclude : [
+  "Gemfile",
+  "Gemfile.lock",
+  "node_modules",
+  "vendor/bundle/",
+  "vendor/cache/",
+  "vendor/gems/",
+  "vendor/ruby/",
+  "lib/",
+  "scripts/",
+  "docker-compose.yml",
+  ]
