add social links

--- a/_config.yml
+++ b/_config.yml
@@ -19,14 +19,14 @@ website: https://seungbinbaik.github.io
 darkmode: false
 
 # Social links
-# twitter_username:
+twitter_username: "iamseungbin"
 # github_username:
 # stackoverflow_username:
 # dribbble_username:
 # facebook_username:
 # flickr_username:
 # instagram_username:
-# linkedin_username:
+linkedin_username: "seungbin-baik-678777144"
 # xing_username:
 # pinterest_username:
 # youtube_username:
