--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ content:
         quote: >
           온라인 빅데이터를 이용한 미래 예측에 관한 연구: 감성 분석과 전이 엔트로피를 기반으로
       - layout: left
-        title: 충남대학교
+        title: Chungnam National University
         sub_title: MBA, Business Administration
         caption: Sep 2013 - Aug 2015
         # quote: >
@@ -125,7 +125,7 @@ content:
         quote: >
           Comparison of Korean and Chinese Economic Laws
       - layout: left
-        title: 휘문고등학교
+        title: Whimoon High School
         # sub_title: BA, Law
         caption: Mar 2002 - Feb 2005
         # quote: >
@@ -140,7 +140,7 @@ content:
         quote: >
           &#10003; 백로그 관리 및 문제 해결을 위한 커뮤니케이션&모더레이팅<br>
           &#10003; 제품 우선순위 결정 및 문제 명확화<br>
-          &#10003; 데이터 기반의 가설 설정 및 검증(SQL, Athena, R, Python, Google Analytics)<br>
+          &#10003; 데이터 기반의 가설 설정 및 검증(SQL, Athena, R, Google App Script, Python, Google Analytics, Firebase)<br>
           &#10003; 실험 설계 및 검증<br>
           &#10003; Notion, md 등을 활용한 문서화<br>
           &#10003; 스프린트 이터레이션 및 스크럼 관리<br>
