--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ content:
         # quote: >
         #   Short institution or course description (optional)
         quote: >
-          온라인 빅데이터를 이용한 미래 예측에 관한 연구: 감성 분석과 전이 엔트로피를 기반으로
+          A Study on Forecast Using Online Big Data: Based on Sentiment Analysis and Transfer Entropy
       - layout: left
         title: Chungnam National University
         sub_title: MBA, Business Administration
