--- a/_config.yml
+++ b/_config.yml
@@ -54,9 +54,9 @@ about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
   안녕하세요! &#128075;
 
-  세상과 사람에 대한 호기심으로 influence factor를 찾아 새로운 기회를 발굴하는 것을 즐기는 <mark>백승빈</mark>입니다. 급변하는 상황과 위기에 대응하는 Game Changer가 되기 위해 보다 나은 팀의 <mark>Facilitator</mark>로 노력하고 있습니다. 저는 목표의 달성과 높은 성과를 위해서는 Teamwork이 중요하다 생각합니다. 그리고 Team-driven을 위해서는 개인의 전문성이 융합될 수 있는 높은 수준의 빠른 소통과 의사결정이 중요하다 믿고 있습니다.
+  세상과 사람에 대한 호기심으로 influence factor를 찾아 새로운 기회를 발굴하는 것을 즐기는 <mark>백승빈</mark>입니다. 우리 팀과 제품이 급변하는 상황과 위기에 대응하는 Game Changer가 되기 위해 팀의 <mark>Facilitator</mark>로 노력하고 있습니다. 저는 목표의 달성과 높은 성과를 위해서는 Teamwork이 중요하다 생각합니다. 그리고 Team-driven을 위해서는 개인의 전문성이 융합될 수 있는 높은 수준의 빠른 소통과 의사결정이 중요하다 믿고 있습니다.
 
-  그리고 이를 총괄하는 팀의 리더는 <mark>오케스트라의 지휘자</mark>라고 생각합니다. 자신만의 특별하고 독보적인 Skill을 갈고 닦음과 동시에 조직에 부족한 것을 채우고 조화를 이룰 수 있게 돕는 모더레이터 역할에 집중하고 조직의 나침반 역할을 해줄 수 있어야 하기 때문입니다. 이때 좋은 지휘자는 필연적으로 동료로부터 높은 신뢰감을 형성하는 것이 중요하다 생각합니다. 이를 위해 저는 전체의 프로세스를 동료들이 납득할 만한 수준으로 세분화하고 발전시키는 것에 집중하는 편이며 건설적이고 효율적인 회의를 위해 그들의 깊이 있는 작업을 이해하는 것에 힘쓰고 있습니다.
+  그리고 이를 총괄하는 팀의 리더는 <mark>오케스트라의 지휘자</mark>라고 생각합니다. 자신만의 특별하고 독보적인 Skill을 갈고 닦음과 동시에 조직에 부족한 것을 채우고 조화를 이룰 수 있게 돕는 모더레이터 역할에 집중하고 조직의 나침반 역할을 해줄 수 있어야 하기 때문입니다. 이때 좋은 지휘자는 필연적으로 동료로부터 높은 신뢰감을 형성하는 것이 중요하다 생각합니다. 이를 위해 저는 동료들이 납득할 만한 수준으로 구체화하며 함께 발전시키는 것에 집중하는 편이며 건설적이고 효율적인 회의를 위해 그들의 깊이 있는 작업을 이해하는 것에 힘쓰고 있습니다.
 
   저의 지금이 제가 이상적으로 생각하는 팀의 리더는 아니지만 이상적인 팀의 리더가 되기 위해 성장하고 있다고 확신합니다. 특히 좋은 제품을 위해 팀 빌딩부터 제품 개발까지의 A to Z, 제품과 비즈니스의 end-to-end를 수행하며 쌓인 경험들은 제가 지향하는 리더가 되기 위한 좋은 경험이 되고 있다고 믿고 있습니다.
 
@@ -132,15 +132,17 @@ content:
         #   Short institution or course description (optional)
         # description: | # this will include new lines to allow paragraphs
           # Comparison of Korean and Chinese Economic Laws
-  - title: Skils
+  - title: Skills
     layout: list
     content:
       - layout: left
         title: 제품 관리 및 서비스 기획
         quote: >
-          &#10003; 백로그 관리 및 문제 해결을 위한 커뮤니케이션&모더레이팅<br>
-          &#10003; 제품 우선순위 결정 및 문제 명확화<br>
-          &#10003; 데이터 기반의 가설 설정 및 검증(SQL, Athena, R, Google App Script, Python, Google Analytics, Firebase)<br>
+          &#10003; 백로그 관리<br>
+          &#10003; 문제 정의 및 명확화<br>
+          &#10003; 우선순위화<br>
+          &#10003; 문제 해결을 위한 커뮤니케이션&모더레이팅<br>
+          &#10003; 데이터 기반의 가설 설정 및 검증<br>(SQL, Athena, R, Google App Script, Google Analytics, DataStudio, Firebase, Python)<br>
           &#10003; 실험 설계 및 검증<br>
           &#10003; Notion, md 등을 활용한 문서화<br>
           &#10003; 스프린트 이터레이션 및 스크럼 관리<br>
@@ -168,7 +170,7 @@ content:
 
 
 # Footer
-footer_show_references: true
+footer_show_references: false
 # references_title: References on request (Override references text)
 
 # Build settings
