--- a/_config.yml
+++ b/_config.yml
@@ -97,6 +97,13 @@ content:
         caption: Aug 2014 - Mar 2020
         quote: >
           &#8226; Research Director<br>&#8226; Product Owner<br>&#8226; Led of Product Owner<br>&#8226; iOS Developer
+      - layout: left
+        title: Eiffel Inc.
+        sub_title: Business Strategy Team
+        caption: Oct 2011 - Jul 2014
+        quote: >
+          &#8226; Marketer<br>
+
   - title: Education
     layout: list
     content:
